<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="decimalPoint">.</string>
    <string name="clear">C</string>
    <string name="clearEntry">CE</string>
    <string name="square">x^2</string>
    <string name="squareRoot">x^0.5</string>
    <string name="inverse">1/x</string>
    <string name="negation">+/_</string>
    <string name="delete"> </string>
    <string name="number">0</string>
    <string name="memory">M</string>
    <string name="memory_store">MS</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_add">M+</string>
    <string name="memory_recall">MR</string>
    <string name="clear_all_memory">MC</string>
</resources>