<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="sixBtn"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:text="@string/number"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/three"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="threeBtn"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <Button
            android:id="@+id/percent"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/percent"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/square"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/square"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/inverse"
            app:layout_constraintTop_toBottomOf="@+id/clearEntry" />

        <Button
            android:id="@+id/div"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/div"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/squareRoot"
            app:layout_constraintTop_toBottomOf="@+id/blankspace" />

        <Button
            android:id="@+id/clearEntry"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/clearEntry"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/percent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/clearEntry"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/blankspace"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:contentDescription="@string/delete"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/inverse"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/inverse"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percent" />

        <Button
            android:id="@+id/squareRoot"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/squareRoot"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/square"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/seven"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="sevenBtn"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inverse" />

        <Button
            android:id="@+id/eight"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="eightBtn"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/square" />

        <Button
            android:id="@+id/nine"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="nineBtn"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/squareRoot" />

        <Button
            android:id="@+id/mul"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/mul"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/div" />

        <Button
            android:id="@+id/four"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="fourBtn"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven" />

        <Button
            android:id="@+id/five"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <Button
            android:id="@+id/six"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <Button
            android:id="@+id/sub"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/sub"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/mul" />

        <Button
            android:id="@+id/one"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="oneBtn"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <Button
            android:id="@+id/two"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="twoBtn"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <Button
            android:id="@+id/add"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/sub" />

        <Button
            android:id="@+id/negation"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/negation"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one" />

        <Button
            android:id="@+id/zero"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:onClick="zeroBtn"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/negation"
            app:layout_constraintTop_toBottomOf="@+id/two" />

        <Button
            android:id="@+id/decimalPoint"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/decimalPoint"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/three" />

        <Button
            android:id="@+id/equal"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/decimalPoint"
            app:layout_constraintTop_toBottomOf="@+id/add" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/clearAllMemory"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/clear_all_memory"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/memoryRecall"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/memory_recall"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/clearAllMemory"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/memoryAdd"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/memory_add"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/memoryRecall"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/memorySubtract"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/memory_subtract"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/memoryAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/memoryStore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/memory_store"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/memorySubtract"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/memory"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/memory"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/memoryStore"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>